bug fixes, and other stuff added